--- a/src/app.scss
+++ b/src/app.scss
@@ -9,6 +9,9 @@ html{
     box-sizing: border-box;
 }
 body{
-   background-color: #000f4f;
+    background-image: url('C:\Users\Toshiba\Desktop\truthordare-react\src\bd988483-c890-4323-8428-b8266384b793.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     color: lightgray;
 }
